# soundkonverter

./: CMakeLists.txt
src/: CMakeLists.txt  CmakeLists.txt  aboutplugins.cpp  aboutplugins.h  codecoptimizations.cpp  codecoptimizations.h  codecproblems.cpp  codecproblems.h  combobutton.cpp  combobutton.h  config.cpp  config.h  conversionoptionsmanager.cpp  conversionoptionsmanager.h  convert.cpp  convert.h  convertitem.cpp  convertitem.h  filelist.cpp  filelist.h  filelistitem.cpp  filelistitem.h  global.cpp  global.h  logger.cpp  logger.h  logviewer.cpp  logviewer.h  main.cpp  options.cpp  options.h  optionsdetailed.cpp  optionsdetailed.h  optionseditor.cpp  optionseditor.h  optionslayer.cpp  optionslayer.h  optionssimple.cpp  optionssimple.h  outputdirectory.cpp  (+10 more)
src/configdialog/: configadvancedpage.cpp  configadvancedpage.h  configbackendspage.cpp  configbackendspage.h  configcoverartpage.cpp  configcoverartpage.h  configdialog.cpp  configdialog.h  configgeneralpage.cpp  configgeneralpage.h  configpagebase.cpp  configpagebase.h
src/core/: backendplugin.cpp  backendplugin.h  codecplugin.cpp  codecplugin.h  codecwidget.cpp  codecwidget.h  conversionoptions.cpp  conversionoptions.h  filterplugin.cpp  filterplugin.h  replaygainplugin.cpp  replaygainplugin.h  ripperplugin.cpp  ripperplugin.h
src/icons/: CMakeLists.txt
src/images/: CMakeLists.txt
src/metadata/: MetaReplayGain.cpp  MetaReplayGain.h  tagengine.cpp  tagengine.h
src/opener/: cdopener.cpp  cdopener.h  diropener.cpp  diropener.h  fileopener.cpp  fileopener.h  playlistopener.cpp  playlistopener.h  urlopener.cpp  urlopener.h
src/plugins/: CMakeLists.txt
src/plugins/soundkonverter_codec_aften/: CMakeLists.txt  aftencodecwidget.cpp  aftencodecwidget.h  soundkonverter_codec_aften.cpp  soundkonverter_codec_aften.h  soundkonverter_codec_aften.json
src/plugins/soundkonverter_codec_faac/: CMakeLists.txt  faaccodecwidget.cpp  faaccodecwidget.h  soundkonverter_codec_faac.cpp  soundkonverter_codec_faac.h  soundkonverter_codec_faac.json
src/plugins/soundkonverter_codec_ffmpeg/: CMakeLists.txt  ffmpegcodecwidget.cpp  ffmpegcodecwidget.h  soundkonverter_codec_ffmpeg.cpp  soundkonverter_codec_ffmpeg.h  soundkonverter_codec_ffmpeg.json
src/plugins/soundkonverter_codec_flac/: CMakeLists.txt  flaccodecwidget.cpp  flaccodecwidget.h  soundkonverter_codec_flac.cpp  soundkonverter_codec_flac.h  soundkonverter_codec_flac.json
src/plugins/soundkonverter_codec_flake/: CMakeLists.txt  flakecodecwidget.cpp  flakecodecwidget.h  soundkonverter_codec_flake.cpp  soundkonverter_codec_flake.h  soundkonverter_codec_flake.json
src/plugins/soundkonverter_codec_fluidsynth/: CMakeLists.txt  fluidsynthcodecwidget.cpp  fluidsynthcodecwidget.h  soundkonverter_codec_fluidsynth.cpp  soundkonverter_codec_fluidsynth.h  soundkonverter_codec_fluidsynth.json
src/plugins/soundkonverter_codec_lame/: CMakeLists.txt  lamecodecwidget.cpp  lamecodecwidget.h  lameconversionoptions.cpp  lameconversionoptions.h  soundkonverter_codec_lame.cpp  soundkonverter_codec_lame.h  soundkonverter_codec_lame.json
src/plugins/soundkonverter_codec_libav/: CMakeLists.txt  libavcodecwidget.cpp  libavcodecwidget.h  soundkonverter_codec_libav.cpp  soundkonverter_codec_libav.h  soundkonverter_codec_libav.json
src/plugins/soundkonverter_codec_mac/: CMakeLists.txt  maccodecwidget.cpp  maccodecwidget.h  soundkonverter_codec_mac.cpp  soundkonverter_codec_mac.h  soundkonverter_codec_mac.json
src/plugins/soundkonverter_codec_mplayer/: CMakeLists.txt  soundkonverter_codec_mplayer.cpp  soundkonverter_codec_mplayer.h  soundkonverter_codec_mplayer.json
src/plugins/soundkonverter_codec_musepack/: CMakeLists.txt  musepackcodecwidget.cpp  musepackcodecwidget.h  musepackconversionoptions.cpp  musepackconversionoptions.h  soundkonverter_codec_musepack.cpp  soundkonverter_codec_musepack.h  soundkonverter_codec_musepack.json
src/plugins/soundkonverter_codec_neroaac/: CMakeLists.txt  neroaaccodecwidget.cpp  neroaaccodecwidget.h  soundkonverter_codec_neroaac.cpp  soundkonverter_codec_neroaac.h  soundkonverter_codec_neroaac.json
src/plugins/soundkonverter_codec_opustools/: CMakeLists.txt  opustoolscodecwidget.cpp  opustoolscodecwidget.h  opustoolsconversionoptions.cpp  opustoolsconversionoptions.h  soundkonverter_codec_opustools.cpp  soundkonverter_codec_opustools.h  soundkonverter_codec_opustools.json
src/plugins/soundkonverter_codec_shorten/: CMakeLists.txt  shortencodecwidget.cpp  shortencodecwidget.h  soundkonverter_codec_shorten.cpp  soundkonverter_codec_shorten.h  soundkonverter_codec_shorten.json
src/plugins/soundkonverter_codec_speex/: CMakeLists.txt  soundkonverter_codec_speex.cpp  soundkonverter_codec_speex.h  soundkonverter_codec_speex.json  speexcodecwidget.cpp  speexcodecwidget.h
src/plugins/soundkonverter_codec_timidity/: CMakeLists.txt  soundkonverter_codec_timidity.cpp  soundkonverter_codec_timidity.h  soundkonverter_codec_timidity.json  timiditycodecwidget.cpp  timiditycodecwidget.h
src/plugins/soundkonverter_codec_ttaenc/: CMakeLists.txt  soundkonverter_codec_ttaenc.cpp  soundkonverter_codec_ttaenc.h  soundkonverter_codec_ttaenc.json  ttaenccodecwidget.cpp  ttaenccodecwidget.h
src/plugins/soundkonverter_codec_twolame/: CMakeLists.txt  soundkonverter_codec_twolame.cpp  soundkonverter_codec_twolame.h  soundkonverter_codec_twolame.json  twolamecodecwidget.cpp  twolamecodecwidget.h
src/plugins/soundkonverter_codec_vorbistools/: CMakeLists.txt  soundkonverter_codec_vorbistools.cpp  soundkonverter_codec_vorbistools.h  soundkonverter_codec_vorbistools.json  vorbistoolscodecwidget.cpp  vorbistoolscodecwidget.h
src/plugins/soundkonverter_codec_wavpack/: CMakeLists.txt  soundkonverter_codec_wavpack.cpp  soundkonverter_codec_wavpack.h  soundkonverter_codec_wavpack.json  wavpackcodecwidget.cpp  wavpackcodecwidget.h
src/replaygainscanner/: replaygainfilelist.cpp  replaygainfilelist.h  replaygainfilelistitem.cpp  replaygainfilelistitem.h  replaygainprocessor.cpp  replaygainprocessor.h  replaygainscanner.cpp  replaygainscanner.h
(+42 files in other folders)
