file(GLOB _plugins *)

#foreach(_current_plugin ${_plugins})
#   if(IS_DIRECTORY ${_current_plugin})
#      add_subdirectory(${_current_plugin})
#   endif(IS_DIRECTORY ${_current_plugin})
#endforeach(_current_plugin)

add_subdirectory(soundkonverter_codec_aften)
add_subdirectory(soundkonverter_codec_faac)
add_subdirectory(soundkonverter_codec_ffmpeg)
add_subdirectory(soundkonverter_codec_flac)
add_subdirectory(soundkonverter_codec_flake)
add_subdirectory(soundkonverter_codec_fluidsynth)
add_subdirectory(soundkonverter_codec_lame)
add_subdirectory(soundkonverter_codec_libav)
#add_subdirectory(soundkonverter_codec_mac)
#add_subdirectory(soundkonverter_codec_mplayer)
#add_subdirectory(soundkonverter_codec_musepack)
#add_subdirectory(soundkonverter_codec_neroaac)
#add_subdirectory(soundkonverter_codec_opustools)
#add_subdirectory(soundkonverter_codec_shorten)
#add_subdirectory(soundkonverter_codec_speex)
#add_subdirectory(soundkonverter_codec_timidity)
#add_subdirectory(soundkonverter_codec_ttaenc)
#add_subdirectory(soundkonverter_codec_twolame)
#add_subdirectory(soundkonverter_codec_vorbistools)
#add_subdirectory(soundkonverter_codec_wavpack)
